--- a/src/sample/view11.fxml
+++ b/src/sample/view11.fxml
@@ -14,8 +14,7 @@
     </rowConstraints>
     <children>
         <Pane prefHeight="542.0" prefWidth="649.0">
-            <children>
-                <Label layoutX="45.0" layoutY="30.0" text="Heute:"/>
+            <children>                <Label layoutX="45.0" layoutY="30.0" text="Heute:"/>
                 <Label fx:id="datum" layoutX="80.0" layoutY="30.0" text="heutiges Datum"/>
                 <Label layoutX="259.0" layoutY="88.0" text="Anzeigen für:"/>
                 <DatePicker fx:id="dateNew" layoutX="336.0" layoutY="84.0"/>
