--- a/src/sample/view5.fxml
+++ b/src/sample/view5.fxml
@@ -6,33 +6,55 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane alignment="center" hgap="10" prefHeight="420.0" prefWidth="615.0" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller5">
+<GridPane alignment="center" hgap="100.0" prefHeight="420.0" prefWidth="615.0" vgap="100.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller5">
     <columnConstraints>
         <ColumnConstraints />
         <ColumnConstraints />
     </columnConstraints>
     <rowConstraints>
         <RowConstraints />
-        <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+        <RowConstraints />
+      <RowConstraints />
+      <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
       <RowConstraints maxHeight="309.0" minHeight="309.0" prefHeight="309.0" />
     </rowConstraints>
     <children>
-        <Pane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="605.0" GridPane.rowIndex="2">
+        <Pane layoutX="100.0" layoutY="100.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="502.0" prefWidth="605.0" GridPane.rowIndex="1">
            <children>
         <Label layoutX="37.0" layoutY="14.0" text="Heute:" />
        <Label fx:id="datum" layoutX="72.0" layoutY="14.0" text="Label" />
       <Label layoutX="14.0" layoutY="54.0" text="Zeitraum inklusive:" />
       <DatePicker fx:id="zeitraumVon" layoutX="14.0" layoutY="87.0" />
-   <Button layoutX="441.0" layoutY="87.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="74.0" text="Erstellen" />
+   <Button layoutX="441.0" layoutY="87.0" mnemonicParsing="false" onAction="#erstellen_button" prefHeight="25.0" prefWidth="74.0" text="Erstellen" />
    <Button layoutX="517.0" layoutY="87.0" mnemonicParsing="false" onAction="#button_close" text="Abbrechen" />
          <Label layoutX="217.0" layoutY="91.0" text="bis" />
          <DatePicker fx:id="zeitraumBis" layoutX="260.0" layoutY="87.0" />
-            <TableView layoutX="13.0" layoutY="120.0" prefHeight="200.0" prefWidth="421.0">
-              <columns>
-                <TableColumn prefWidth="75.0" text="C1" />
-                <TableColumn prefWidth="75.0" text="C2" />
-              </columns>
-            </TableView>
+               <TableView fx:id="bestand" layoutX="8.0" layoutY="140.0" prefHeight="200.0" prefWidth="688.0">
+                   <columns>
+                       <TableColumn fx:id="Allrounder" prefWidth="70.0" text="MTB Allrounder" />
+                       <TableColumn fx:id="Competition" prefWidth="70.0" text="MTB Competition" />
+                       <TableColumn fx:id="Downhill" prefWidth="70.0" text="MTB Downhill" />
+                       <TableColumn fx:id="Extreme" prefWidth="70.0" text="MTB Extreme" />
+                       <TableColumn fx:id="Freeride" prefWidth="70.0" text="MTB Freeride" />
+                       <TableColumn fx:id="Marathon" prefWidth="70.0" text="MTB Marathon" />
+                       <TableColumn fx:id="Performance" prefWidth="70.0" text="MTB Performance" />
+                       <TableColumn fx:id="Trail" prefWidth="70.0" text="MTB Trail" />
+                       <TableColumn fx:id="Tundra" prefWidth="70.0" text="Fizik Tundra" />
+                       <TableColumn fx:id="Raceline" prefWidth="70.0" text="Raceline" />
+                       <TableColumn fx:id="Spark" prefWidth="70.0" text="Spark" />
+                       <TableColumn fx:id="Speedline" prefWidth="70.0" text="Speedline" />
+                       <TableColumn fx:id="a7005DB" prefWidth="70.0" text="Aluminium 7005DB" />
+                       <TableColumn fx:id="a7005TB" prefWidth="70.0" text="Aluminium 7005TB" />
+                       <TableColumn fx:id="Monocoque" prefWidth="70.0" text="Carbon Monocoque" />
+                       <TableColumn fx:id="F100" prefWidth="70.0" text="Fox32 F100" />
+                       <TableColumn fx:id="F80" prefWidth="70.0" text="Fox32 F80" />
+                       <TableColumn fx:id="Talas" prefWidth="70.0" text="Fox Talas 140" />
+                       <TableColumn fx:id="Reba" prefWidth="70.0" text="Rock Schox Reba" />
+                       <TableColumn fx:id="f351" prefWidth="70.0" text="Rock Schox Recon 351" />
+                       <TableColumn fx:id="SL" prefWidth="70.0" text="Rock Schox Recon SL" />
+                       <TableColumn fx:id="Raidon" prefWidth="70.0" text="SR Suntour Raidon" />
+                   </columns>
+               </TableView>
            </children>
         </Pane>
 </children>
