--- a/src/sample/view2.fxml
+++ b/src/sample/view2.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.image.*?>
+<?import java.net.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane alignment="center" hgap="10" prefHeight="329.0" prefWidth="474.0" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller2">
+<GridPane alignment="center" hgap="10" prefHeight="566.0" prefWidth="474.0" stylesheets="@../../../bootstrap3.css" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller2">
    <columnConstraints>
       <ColumnConstraints />
       <ColumnConstraints />
@@ -15,20 +18,32 @@
       <RowConstraints />
       <RowConstraints />
    </rowConstraints>
+
    <children>
-      <Pane prefHeight="477.0" prefWidth="464.0">
+      <Pane prefHeight="559.0" prefWidth="464.0">
          <children>
-         <Label layoutX="8.0" layoutY="27.0" text="Heute:" />
-         <Label fx:id="datum" layoutX="44.0" layoutY="27.0" />
-         <Button layoutX="117.0" layoutY="23.0" mnemonicParsing="false" onAction="#changeDate" text="Tag ändern" />
-         <Button layoutX="7.0" layoutY="106.0" mnemonicParsing="false" onAction="#infosHeute" text="Infos über heute anzeigen" />
-         <Button layoutX="8.0" layoutY="137.0" mnemonicParsing="false" onAction="#bestandsreportErstellen" prefHeight="25.0" prefWidth="153.0" text="Bestandsreport erstellen" />
-         <Button layoutX="8.0" layoutY="169.0" mnemonicParsing="false" onAction="#scorReport" prefHeight="25.0" prefWidth="153.0" text="SCOR Report" />
-         <Button layoutX="268.0" layoutY="106.0" mnemonicParsing="false" onAction="#bestellungNeu" text="Neue Bestellung hinzufügen" />
-         <Button layoutX="268.0" layoutY="137.0" mnemonicParsing="false" onAction="#marketingaktion" prefHeight="25.0" prefWidth="166.0" text="Marketingaktion" />
-         <Button layoutX="268.0" layoutY="169.0" mnemonicParsing="false" onAction="#zuliefererProbleme" prefHeight="25.0" prefWidth="166.0" text="Zuliefererprobleme" />
-         <Button layoutX="268.0" layoutY="200.0" mnemonicParsing="false" onAction="#lagerschaden" prefHeight="25.0" prefWidth="166.0" text="Lagerschaden" />
-         <Label layoutX="54.0" layoutY="37.0" />
+         <Label layoutX="15.0" layoutY="166.0" text="Heute:">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+         <Label fx:id="datum" layoutX="51.0" layoutY="166.0">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+         <Button layoutX="124.0" layoutY="162.0" mnemonicParsing="false" onAction="#changeDate" text="Tag ändern" />
+         <Button layoutX="14.0" layoutY="245.0" mnemonicParsing="false" onAction="#infosHeute" text="Infos über heute anzeigen" />
+         <Button layoutX="15.0" layoutY="283.0" mnemonicParsing="false" onAction="#bestandsreportErstellen" prefHeight="32.0" prefWidth="183.0" text="Bestandsreport erstellen" />
+         <Button layoutX="15.0" layoutY="323.0" mnemonicParsing="false" onAction="#prodPlanung" prefHeight="32.0" prefWidth="183.0" text="Produktionsplanung" />
+         <Button layoutX="260.0" layoutY="245.0" mnemonicParsing="false" onAction="#bestellungNeu" text="Neue Bestellung hinzufügen" />
+         <Button layoutX="260.0" layoutY="283.0" mnemonicParsing="false" onAction="#marketingaktion" prefHeight="32.0" prefWidth="196.0" text="Marketingaktion" />
+         <Button layoutX="260.0" layoutY="323.0" mnemonicParsing="false" onAction="#zuliefererProbleme" prefHeight="32.0" prefWidth="196.0" text="Zuliefererprobleme" />
+         <Button layoutX="258.0" layoutY="362.0" mnemonicParsing="false" onAction="#lagerschaden" prefHeight="32.0" prefWidth="196.0" text="Lagerschaden" />
+         <Label layoutX="61.0" layoutY="176.0" />
+            <ImageView fx:id="logo" fitHeight="98.0" fitWidth="265.0" layoutX="100.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../Public/logo_adventure_works.png" />
+               </image></ImageView>
+            <Button layoutX="15.0" layoutY="362.0" mnemonicParsing="false" onAction="#scorReport" prefHeight="32.0" prefWidth="183.0" text="SCOR Report" />
          </children>
       </Pane>
    </children>
