--- a/src/sample/view8.fxml
+++ b/src/sample/view8.fxml
@@ -28,14 +28,14 @@
            <DatePicker fx:id="zeitraumBis" layoutX="45.0" layoutY="175.0" />
          <Label layoutX="45.0" layoutY="255.0" text="Erwartete Erhöhung Nachfrage:" />
          <DatePicker fx:id="erwartetNachfrage" layoutX="213.0" layoutY="251.0" />
-           <Label layoutX="443.0" layoutY="97.0" text="Fahrradtyp 1" />
-           <Label layoutX="443.0" layoutY="130.0" text="Fahrradtyp 2" />
-           <Label layoutX="443.0" layoutY="161.0" text="Fahrradtyp 3" />
-           <Label layoutX="443.0" layoutY="194.0" text="Fahrradtyp 4" />
-           <Label layoutX="443.0" layoutY="227.0" text="Fahrradtyp 5" />
-           <Label layoutX="443.0" layoutY="258.0" text="Fahrradtyp 6" />
-           <Label layoutX="443.0" layoutY="290.0" text="Fahrradtyp 7" />
-           <Label layoutX="443.0" layoutY="321.0" text="Fahrradtyp 8" />
+           <Label layoutX="443.0" layoutY="97.0" text="MTB Allrounder" />
+           <Label layoutX="443.0" layoutY="130.0" text="MTB Competition" />
+           <Label layoutX="443.0" layoutY="161.0" text="MTB Downhill" />
+           <Label layoutX="443.0" layoutY="194.0" text="MTB Extreme" />
+           <Label layoutX="443.0" layoutY="227.0" text="MTB Freeride" />
+           <Label layoutX="443.0" layoutY="258.0" text="MTB Marathon" />
+           <Label layoutX="443.0" layoutY="290.0" text="MTB Performance" />
+           <Label layoutX="443.0" layoutY="321.0" text="MTB Trail" />
          <Label layoutX="457.0" layoutY="65.0" text="betrifft:" />
          <CheckBox fx:id="ft1" layoutX="530.0" layoutY="97.0" mnemonicParsing="false" />
          <CheckBox fx:id="ft2" layoutX="530.0" layoutY="127.0" mnemonicParsing="false" />
